--- a/README
+++ b/README
@@ -1,8 +1,9 @@
-# README - Implementação de Pedido e Carrinho com AsyncStorage
 
-## Visão Geral
+# App Pizzaria
 
-Esta entrega implementa a funcionalidade de gerenciamento de pedidos e carrinho de compras em uma aplicação React Native. Os pedidos são carregados a partir de uma API e exibidos ao usuário, que pode adicionar produtos ao carrinho, alterar quantidades e remover itens.
+Com essas instruções, você terá todos os recursos necessários para configurar, executar e testar o aplicativo de forma adequada, garantindo que todas as funcionalidades operem conforme o esperado. Assim, será possível visualizar o funcionamento completo do sistema, desde a integração com a API até a persistência de dados no carrinho, proporcionando uma experiência prática e completa com o app.
+
+
 
 ## Persistência dos Dados com AsyncStorage
 
@@ -46,10 +47,52 @@ A aplicação utiliza o banco de dados MySQL para armazenar informações da piz
 1. **Abrir MySQL Workbench**  
    Conecte-se ao servidor MySQL local (geralmente `localhost` na porta padrão `3306`).  
 
-2. **Criar o banco de dados**  
+2. ** Criar o banco de dados pelo phpmyAdmin **
+   Para criar o banco de dados pelo phpmyAdmin, basta criar um banco de dados chamado pizzaria.
+
+3. **Criar o banco de dados**  
    Na aba de query (SQL Editor), execute o comando abaixo para criar o banco:  
    ```sql
    CREATE DATABASE pizzaria;
    USE pizzaria;
+   ```
+
+
+### Funcionamento Geral do App
+
+   1. ** Ativar servidor backend **
+      Para o funcionamento correto do app é necessário ligar o seu backend, criado em springboot pois nele estão todas as APIs necessárias para o funcionamento do app:
+   2. ** Onde baixar o projeto backend **
+      O projeto backend pode ser acessado por meio deste repositório do github(https://github.com/GuilhermeVale1/pizzaria) na branch master:
+
+
+### Dependências do projeto
+
+
+| Pacote                                    | Versão   | Descrição                                          |
+| ----------------------------------------- | -------- | -------------------------------------------------- |
+| @expo/metro-runtime                       | \~5.0.4  | Runtime do Metro bundler para projetos Expo        |
+| @react-native-async-storage/async-storage | ^2.1.2   | Armazenamento assíncrono para React Native         |
+| @react-navigation/bottom-tabs             | ^7.3.12  | Navegação com abas inferiores no React Navigation  |
+| @react-navigation/native                  | ^7.1.8   | Biblioteca principal de navegação                  |
+| @react-navigation/native-stack            | ^7.3.11  | Navegação empilhada para React Navigation          |
+| axios                                     | ^1.9.0   | Cliente HTTP baseado em Promises                   |
+| expo                                      | \~53.0.7 | Framework e plataforma para apps universais        |
+| expo-linking                              | ^7.1.4   | Gerenciamento de links e deep linking no Expo      |
+| expo-status-bar                           | \~2.2.3  | Componente para controlar a status bar             |
+| expo-image-picker                         | \~16.1.4 | Biblioteca para seleção de imagens                 |
+| react                                     | 19.0.0   | Biblioteca principal para construção de UIs        |
+| react-dom                                 | 19.0.0   | Renderização de React para ambiente web            |
+| react-native                              | 0.79.2   | Framework para apps móveis nativos                 |
+| react-native-gesture-handler              | ^2.25.0  | Manipulação de gestos no React Native              |
+| react-native-reanimated                   | ^3.17.5  | Animações declarativas para React Native           |
+| react-native-safe-area-context            | ^5.4.0   | Gerenciamento de áreas seguras em dispositivos     |
+| react-native-screens                      | ^4.10.0  | Otimização de navegação com gerenciamento de telas |
+| react-native-toast-message                | ^2.3.0   | Exibição de mensagens toast                        |
+| react-native-vector-icons                 | ^10.2.0  | Ícones vetoriais para React Native                 |
+| react-native-web                          | ^0.20.0  | Compatibilidade entre React Native e Web           |
+
+
+Para a instalação dessas dependências no react native é necessário utilizar o comando (npm ci), que irá instalar apenas as dependências do package.json do aplicativo.
 
 
